--- a/404.html
+++ b/404.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-description: "敬畏_是智慧的开端!"
+description: "If I try my best and fail, well, I've tried my best!"
 header-img: "img/404-bg.jpg"
 permalink: /404.html
 ---
