--- a/offline.html
+++ b/offline.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-description: "人生如戏，全靠演技 😥"
+description: "If you want to make everyone happy, dont be a leader - sell ice cream."
 header-img: "img/404-bg.jpg"
 permalink: /offline.html
 ---
