--- a/tags.html
+++ b/tags.html
@@ -1,7 +1,7 @@
 ---
 title: Tags
 layout: default
-description: Speaking the truth in love惟用爱心说诚实话，凡事长进。各尽其职，彼此相助。
+description: Speaking the truth in love.惟用爱心说诚实话，凡事长进。各尽其职，彼此相助。
 header-img: "img/tag-bg.jpg"
 ---
 
