--- a/about.html
+++ b/about.html
@@ -19,7 +19,7 @@ header-img: "img/post-bg-rwd.jpg"
     <!--我若能说万人的方言，并天使的话语，却没有爱，我就成了鸣的锣、响的钹一般。我若有先知讲道之能，也明白各样的奥秘、各样的知识，而且有全备的信叫我能够移山，却没有爱，我就算不得什么。 我若将所有的周济穷人，又舍己身叫人焚烧，却没有爱，仍然于我无益。-->
     <!--爱是不嫉妒，爱是不自夸，不张狂，不做害羞的事，不求自己的益处，不轻易发怒，不计算人的恶，不喜欢不义，只喜欢真理；凡事包容，凡事相信，凡事盼望，凡事忍耐。-->
     <blockquote>
-        <p>爱是恒久忍耐，又有恩慈。爱是永不止息。常保饥渴求知，常存虚怀若愚。<br>
+        <p>爱是恒久忍耐，又有恩慈。常保饥渴求知，常存虚怀若愚。<br>
             你的时间有限，所以不要浪费时间为别人而活。不要被教条所限，那也就是活在别人的观念里。不要让别人的意见左右自己内心的声音。最重要的是，勇敢的去追随自己的心灵。<br>
             原来我们不是顾念所见的，乃是顾念所不见的，因为所见的是暂时的，是永远的。<br>
 
