--- a/about.html
+++ b/about.html
@@ -21,7 +21,7 @@ header-img: "img/post-bg-rwd.jpg"
     <blockquote>
         <p>爱是恒久忍耐，又有恩慈。常保饥渴求知，常存虚怀若愚。<br>
             你的时间有限，所以不要浪费时间为别人而活。不要被教条所限，那也就是活在别人的观念里。不要让别人的意见左右自己内心的声音。最重要的是，勇敢的去追随自己的心灵。<br>
-            原来我们不是顾念所见的，乃是顾念所不见的，因为所见的是暂时的，是永远的。<br>
+            原来我们不是顾念所见的，乃是顾念所不见的，因为所见的是暂时的，所不见的是永恒的。<br>
 
         </p>
     </blockquote>
