change to English version of 'about' page

--- a/about.html
+++ b/about.html
@@ -88,16 +88,16 @@ header-img: "img/post-bg-rwd.jpg"
     function _render(){
         var _hash = window.location.hash;
         // en
-        if(_hash == "#en"){
-            $select.selectedIndex = 1;
-            $en.style.display = "block";
-            $zh.style.display = "none";
-        // zh by default
-        }else{
-            // not trigger onChange, otherwise cause a loop call.
+        if(_hash == "#zh"){
             $select.selectedIndex = 0;
             $zh.style.display = "block";
             $en.style.display = "none";
+        // en by default
+        }else{
+            // not trigger onChange, otherwise cause a loop call.
+            $select.selectedIndex = 1;
+            $en.style.display = "block";
+            $zh.style.display = "none";
         }
     }
 
